@@ -1,22 +1,16 @@
 # -*- coding: utf-8 -*-
-from cms.utils.conf import get_cms_setting
 
 
 def use_draft(request):
-    if request:
-        structure = get_cms_setting('CMS_TOOLBAR_URL__BUILD')
-        is_staff = request.user.is_authenticated() and request.user.is_staff
-        edit_mode_active = is_staff and request.session.get('cms_edit', False)
-        structure_mode_active = is_staff and structure in request.GET
-        return bool(edit_mode_active or structure_mode_active)
-    return False
+    is_staff = (request.user.is_authenticated() and request.user.is_staff)
+    return is_staff and not request.session.get('cms_preview')
 
 
 def get_model_queryset(model, request=None):
     """Decision function used in frontend - says which model should be used.
     Public models are used unless looking at preview or edit versions of the page.
     """
-    if use_draft(request):
+    if request and use_draft(request):
         return model.objects.drafts()
     return model.objects.public()
 
